--- a/app/src/main/res/layout/activity_medicines.xml
+++ b/app/src/main/res/layout/activity_medicines.xml
@@ -20,8 +20,7 @@
         android:layout_marginStart="124dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/round_pink_button"
-        android:onClick="continueBtnListener"
-        android:text="@string/save"
+        android:text="@string/addBtn"
         android:textColor="#ffffff"
         android:textSize="16sp"
         android:textStyle="bold"
