--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -32,7 +32,7 @@
 
     <view class="android.support.v7.widget.RecyclerView"
         android:id="@+id/rvContacts"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
