--- a/app/src/main/res/layout/alarm.xml
+++ b/app/src/main/res/layout/alarm.xml
@@ -20,18 +20,20 @@
         android:id="@+id/time"
         android:layout_width="106dp"
         android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="104dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="81dp"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
         tools:text="Expanded View" />
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/deleteAlarm"
+        android:layout_width="49dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/time"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="107dp" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="66dp"
+        android:background="@android:drawable/ic_delete" />
 
 </RelativeLayout>
