--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,6 +7,22 @@
     android:background="@drawable/rsz_main_dots"
     tools:context=".menuActivity">
 
+    <Button
+        android:id="@+id/saveBtn2"
+        android:layout_width="84dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_pinkwhite_button"
+        android:text="התנתק"
+        android:textColor="#504e61"
+        android:textColorLink="#feb5b6"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="125dp"
@@ -19,6 +35,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="87dp"
         android:clickable="true"
+        android:focusable="true"
         android:gravity="center"
         android:text="@string/title_fev1"
         android:textAllCaps="true"
@@ -29,8 +46,7 @@
         app:layout_constraintEnd_toStartOf="@+id/breath"
         app:layout_constraintStart_toEndOf="@+id/cal"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655"
-        android:focusable="true" />
+        app:layout_constraintVertical_bias="0.655" />
 
     <ImageView
         android:id="@+id/fav"
@@ -90,18 +106,17 @@
         android:id="@+id/conect"
         android:layout_width="92dp"
         android:layout_height="88dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="192dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
-        app:layout_constraintEnd_toStartOf="@+id/qa"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/rsz_contact_icon" />
 
     <ImageView
@@ -174,5 +189,20 @@
         app:layout_constraintStart_toEndOf="@+id/medc"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         app:srcCompat="@drawable/rsz_sport_icon" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="55dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/settings" />
 
 </android.support.constraint.ConstraintLayout>
