--- a/app/src/main/res/layout/activity_add_nutrition.xml
+++ b/app/src/main/res/layout/activity_add_nutrition.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/nutritionbackground"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context=".addNutrition">
 
     <Button
