--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">#fd8f90</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="CFtheme" parent="AppTheme" />
