--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -39,8 +39,8 @@
         android:id="@+id/rvPosts"
         android:layout_width="match_parent"
         android:layout_height="340dp"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/header"
@@ -54,13 +54,13 @@
             android:id="@+id/nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/iconImg"
-            app:layout_constraintEnd_toStartOf="@id/iconImg"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintEnd_toStartOf="@id/iconImg" />
 
         <TextView
             android:id="@+id/textView26"
@@ -70,53 +70,65 @@
             android:textColor="#ffffff"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/nickname"
-            app:layout_constraintEnd_toStartOf="@id/nickname"/>
+            app:layout_constraintEnd_toStartOf="@id/nickname" />
 
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="70dp"
+            android:layout_marginRight="70dp"
             android:text="טקסט"
             android:textColor="#ffffff"
             android:textSize="16sp"
-            android:layout_marginEnd="70dp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginRight="70dp" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="60dp"
+            android:layout_marginRight="60dp"
             android:text="תמונה"
             android:textColor="#ffffff"
             android:textSize="16sp"
-            android:layout_marginEnd="60dp"
-            app:layout_constraintEnd_toStartOf="@id/text"
             app:layout_constraintBottom_toBottomOf="@id/text"
-            android:layout_marginRight="60dp" />
+            app:layout_constraintEnd_toStartOf="@id/text" />
 
         <TextView
             android:id="@+id/location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="60dp"
+            android:layout_marginRight="60dp"
             android:text="מיקום"
             android:textColor="#ffffff"
             android:textSize="16sp"
-            android:layout_marginEnd="60dp"
-            app:layout_constraintEnd_toStartOf="@id/image"
             app:layout_constraintBottom_toBottomOf="@id/image"
-            android:layout_marginRight="60dp"/>
+            app:layout_constraintEnd_toStartOf="@id/image" />
 
         <ImageView
             android:id="@+id/iconImg"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:srcCompat="@drawable/rsz_food_icon"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="16dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/rsz_food_icon" />
     </android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/back_btn"
+        android:rotation="180"
+        android:textColor="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
