--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -100,20 +100,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/feed"
         app:layout_constraintVertical_bias="0.341"
-        app:srcCompat="@drawable/rsz_cal_icon" />
+        app:srcCompat="@drawable/rsz_cont_icon" />
 
     <ImageView
         android:id="@+id/feed"
         android:layout_width="92dp"
         android:layout_height="88dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="192dp"
         android:clickable="true"
         android:focusable="true"
         android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/qa"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -191,7 +195,7 @@
         app:srcCompat="@drawable/rsz_sport_icon" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/settings"
         android:layout_width="55dp"
         android:layout_height="47dp"
         android:layout_marginEnd="8dp"
@@ -199,6 +203,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.976"
         app:layout_constraintStart_toStartOf="parent"
