--- a/app/src/main/res/layout/activity_sign_up_details.xml
+++ b/app/src/main/res/layout/activity_sign_up_details.xml
@@ -42,7 +42,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="שם"
+        android:hint="כינוי"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/weight"
         app:layout_constraintEnd_toEndOf="parent"
